--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
       "scripts": {
             "test": "jest"
+      },
+      "dependencies": {
+            "applicationinsights": "^1.8.8"
       }
 }
