--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
         "**/target": true
     },
     "rubyTestExplorer.minitestDirectory": "./src/test/java/",
-    "rubyTestExplorer.rspecDirectory": "./src/test/java/"
+    "rubyTestExplorer.rspecDirectory": "./src/test/java/",
+    "python.pythonPath": "C:\\Users\\Alexander Petrovskiy\\.virtualenvs\\testHaEa-huF8G_RW\\Scripts\\python.exe"
 }
